--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* { 
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body { 
+	background-color: beige;
+	font-size: 10px;
+	block-size: 100vh;
+	inline-size: 100%;
+}
+
+main#root { 
+	inline-size: inherit;
+	block-size: inherit;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	font-size: 1.5rem;
+}
+
+section  { 
+    padding: 1rem;
+    border: 1px solid black;
+    inline-size: 375px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+section form { 
+    display: block;
+    padding: 0.1rem;
+}
+
+
+
+section form label span { 
+    color: black;
+    font-size: 1.4rem;
+    font-weight: bold;   
+    margin-inline-end: 1rem;
+    text-align: center;
+}
+
+
+section form label input[type="file" i]::-webkit-file-upload-button , section form button {
+    background-color: black;
+    color: white;
+    outline: none;
+    border: none;
+    padding: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+	transition: 0.3s;
+
+}
+
+
+section form button { 
+    font-size: 1.2rem;
+}
+
+section form button:hover ,section form label input[type="file" i]::-webkit-file-upload-button:hover { 
+    background-color: white;
+    color: black;
+    border: 1px black solid;
+
+}
+
+
+
+section.video-container { 
+	flex-direction: column;
+}
+
+
+video { 
+	inline-size: 80%;
+	block-size: 150px;
+	border: 1px red solid;
+	margin-block-end: 1rem;
 }
