--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ main#root {
 section  { 
     padding: 1rem;
     border: 1px solid black;
-    inline-size: 375px;
+    inline-size: 350px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,4 +85,5 @@ video {
 	block-size: 150px;
 	border: 1px red solid;
 	margin-block-end: 1rem;
+    border-radius: 2px;
 }
